# capital_1

./: .gitignore  Makefile  README.md  params.yml  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Makefile-checkpoint  README-checkpoint.md  params-checkpoint.yml  pyproject-checkpoint.toml
3e6b036b-1113-46f9-8251-4d9280b6a075/logs/: TCGA-DD-AACI-01Z-00-DX1.C2931364-0514-49DB-AC95-02238FCA2EA5.svs.parcel
553f70e1-d83d-4bc8-9cee-dac77068a458/logs/: TCGA-CC-A7IJ-01Z-00-DX1.525F3A40-46CC-4455-9473-F99BFA2D3572.svs.parcel
Notebooks/: 00_template.ipynb
accessory_data/: TCGA-LIHC_metadata.tsv
accessory_data/.ipynb_checkpoints/: TCGA-LIHC_manifest-checkpoint.txt  TCGA-LIHC_manifest_small-checkpoint.txt
accessory_data/biospecimen/: analyte.tsv  portion.tsv  slide.tsv
accessory_data/biospecimen/.ipynb_checkpoints/: aliquot-checkpoint.tsv
micropost/: micropost_1.html  micropost_1.qmd
micropost/.ipynb_checkpoints/: micropost_1-checkpoint.qmd
scripts/: convert_to_ome_zarr.py  dev.py  pull_data.sh  setup.sh
scripts/.ipynb_checkpoints/: dev-checkpoint.py  run-checkpoint.py
src/capital_1/: IO.py  hello_world.py
src/capital_1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/capital_1/.ipynb_checkpoints/: __init__-checkpoint.py  config-checkpoint.py
src/mash_model_1_0/: config.py
src/mash_model_1_0.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mash_model_1_0/.ipynb_checkpoints/: __init__-checkpoint.py
